Write out the HTML elements

--- a/index.html
+++ b/index.html
@@ -1,12 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="header-top">
+            <div class="seach-box">
+                <input type="search">
+            </div>
+            <span>bell</span>
+            <div class="user">
+                <div>image</div>
+                <h6 class="user-name">Son Do</h6>
+            </div>
+        </div>
+        <div class="header-bottom">
+            <div class="user">
+                <div>image</div>
+                <p>Hi there,</p>
+                <h6 class="user-name">Son Do (@shadow)</h6>
+            </div>
+            <div class="buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+    </header>
+
+    <section class="sidebar">
+        <h1>Dashboard</h1>
+        <ul class="sidebar-top">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Messages</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Tasks</a></li>
+            <li><a href="#">Communities</a></li>
+        </ul>
+        <ul class="sidebar-bottom">
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Privacy</a></li>
+        </ul>
+    </section>
+
+    <main>
+        <div class="projects">
+            <h1>Your projects</h1>
+            <div class="projects-container">
+                <div class="project">
+                    <h6 class="name">Time Machine</h6>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+                        inventore consectetur in perspiciatis non voluptatibus animi, molestias omnis magni aperiam.</p>
+                    <div class="buttons">
+                        3 icons
+                    </div>
+                </div>
+                <div class="project">
+                    <h6 class="name">Quantum Computer</h6>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+                        inventore consectetur in perspiciatis non voluptatibus animi, molestias omnis magni aperiam.</p>
+                    <div class="buttons">
+                        3 icons
+                    </div>
+                </div>
+                <div class="project">
+                    <h6 class="name">Lighting Gun</h6>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+                        inventore consectetur in perspiciatis non voluptatibus animi, molestias omnis magni aperiam.</p>
+                    <div class="buttons">
+                        3 icons
+                    </div>
+                </div>
+                <div class="project">
+                    <h6 class="name">Laser Saber</h6>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+                        inventore consectetur in perspiciatis non voluptatibus animi, molestias omnis magni aperiam.</p>
+                    <div class="buttons">
+                        3 icons
+                    </div>
+                </div>
+                <div class="project">
+                    <h6 class="name">Super Shuttle</h6>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+                        inventore consectetur in perspiciatis non voluptatibus animi, molestias omnis magni aperiam.</p>
+                    <div class="buttons">
+                        3 icons
+                    </div>
+                </div>
+                <div class="project">
+                    <h6 class="name">Giant Robot</h6>
+                    <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+                        inventore consectetur in perspiciatis non voluptatibus animi, molestias omnis magni aperiam.</p>
+                    <div class="buttons">
+                        3 icons
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="announcements">
+            <h1>Announcements</h1>
+            <div class="announce">
+                <h6 class="brief">Site Maintainance</h6>
+                <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
+            </div>
+            <div class="announce">
+                <h6 class="brief">Site Maintainance</h6>
+                <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
+            </div>
+            <div class="announce">
+                <h6 class="brief">Site Maintainance</h6>
+                <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
+            </div>
+        </div>
+
+        <div class="trending">
+            <h1>Trending</h1>
+            <div class="trend">
+                <div>image</div>
+                <div class="text">
+                    <p class="user">@tegan</p>
+                    <p class="project">Cassle Builder</p>
+                </div>
+            </div>
+            <div class="trend">
+                <div>image</div>
+                <div class="text">
+                    <p class="user">@morgan</p>
+                    <p class="project">Megamind Project</p>
+                </div>
+            </div>
+            <div class="trend">
+                <div>image</div>
+                <div class="text">
+                    <p class="user">@shadow</p>
+                    <p class="project">Laser Saber</p>
+                </div>
+            </div>
+            <div class="trend">
+                <div>image</div>
+                <div class="text">
+                    <p class="user">@alex</p>
+                    <p class="project">Dancing Machine</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
 </body>
+
 </html>
