Use Material Design cdn

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -40,8 +41,8 @@
         <h1>Dashboard</h1>
         <ul class="sidebar-top">
             <li><a href="#">
-             Home
-            </a></li>
+                    Home
+                </a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Messages</a></li>
             <li><a href="#">History</a></li>
