Change the link to use Material Icons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -40,9 +40,11 @@
     <section class="sidebar">
         <h1>Dashboard</h1>
         <ul class="sidebar-top">
-            <li><a href="#">
-                    Home
-                </a></li>
+            <li>
+                <a href="#">
+                    <i class = "material-icons">accessibility</i> Home
+                </a>
+            </li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Messages</a></li>
             <li><a href="#">History</a></li>
