Wrap the sidebar link text in span tags

--- a/index.html
+++ b/index.html
@@ -38,23 +38,58 @@
     </header>
 
     <section class="sidebar">
-        <h1>Dashboard</h1>
+        <h1>
+            <i class="material-icons">view-dashboard</i> Dashboard
+        </h1>
         <ul class="sidebar-top">
             <li>
                 <a href="#">
-                    <i class = "material-icons">accessibility</i> Home
+                    <span>Home</span>
                 </a>
             </li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Messages</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Tasks</a></li>
-            <li><a href="#">Communities</a></li>
+            <li>
+                <a href="#">
+                    <span>Profile</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Messages</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>History</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Tasks</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Communities</span>
+                </a>
+            </li>
         </ul>
+
         <ul class="sidebar-bottom">
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Privacy</a></li>
+            <li>
+                <a href="#">
+                    <span>Settings</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Support</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span>Privacy</span>
+                </a>
+            </li>
         </ul>
     </section>
 
