Add avatar image to header

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             </svg>
 
             <div class="user">
-                <div>image</div>
+                <img src="./image/eagle.jpg" alt="avatar">
                 <h6 class="user-name">Son Do</h6>
             </div>
         </div>
         <div class="header-bottom">
             <div class="user">
-                <div>image</div>
+                <img src="./image/eagle.jpg" alt="avatar">
                 <div>
                     <p>Hi there,</p>
                     <h6 class="user-name">Son Do (@shadow)</h6>
