--- a/index.html
+++ b/index.html
@@ -266,19 +266,21 @@
             </div>
         </div>
 
-        <div class="announcements">
+        <div class="announces">
             <h1>Announcements</h1>
-            <div class="announce">
-                <h6 class="brief">Site Maintainance</h6>
-                <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
-            </div>
-            <div class="announce">
-                <h6 class="brief">Site Maintainance</h6>
-                <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
-            </div>
-            <div class="announce">
-                <h6 class="brief">Site Maintainance</h6>
-                <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
+            <div class="announces-container">
+                <div class="announce">
+                    <h6 class="brief">Site Maintainance</h6>
+                    <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
+                </div>
+                <div class="announce">
+                    <h6 class="brief">Community Share Day</h6>
+                    <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
+                </div>
+                <div class="announce">
+                    <h6 class="brief">Update Privacy Policy</h6>
+                    <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
+                </div>
             </div>
         </div>
 
