Re-structure trends section

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <div class="announces">
             <h1>Announcements</h1>
-            <div class="announces-container">
+            <div class="announce-container">
                 <div class="announce">
                     <h6 class="brief">Site Maintainance</h6>
                     <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
@@ -284,34 +284,36 @@
             </div>
         </div>
 
-        <div class="trending">
+        <div class="trends">
             <h1>Trending</h1>
-            <div class="trend">
-                <div>image</div>
-                <div class="text">
-                    <p class="user">@tegan</p>
-                    <p class="project">Cassle Builder</p>
+            <div class="trends-container">
+                <div class="trend">
+                    <div>image</div>
+                    <div class="text">
+                        <p class="user">@tegan</p>
+                        <p class="project">Cassle Builder</p>
+                    </div>
                 </div>
-            </div>
-            <div class="trend">
-                <div>image</div>
-                <div class="text">
-                    <p class="user">@morgan</p>
-                    <p class="project">Megamind Project</p>
+                <div class="trend">
+                    <div>image</div>
+                    <div class="text">
+                        <p class="user">@morgan</p>
+                        <p class="project">Megamind Project</p>
+                    </div>
                 </div>
-            </div>
-            <div class="trend">
-                <div>image</div>
-                <div class="text">
-                    <p class="user">@shadow</p>
-                    <p class="project">Laser Saber</p>
+                <div class="trend">
+                    <div>image</div>
+                    <div class="text">
+                        <p class="user">@shadow</p>
+                        <p class="project">Laser Saber</p>
+                    </div>
                 </div>
-            </div>
-            <div class="trend">
-                <div>image</div>
-                <div class="text">
-                    <p class="user">@alex</p>
-                    <p class="project">Dancing Machine</p>
+                <div class="trend">
+                    <div>image</div>
+                    <div class="text">
+                        <p class="user">@alex</p>
+                        <p class="project">Dancing Machine</p>
+                    </div>
                 </div>
             </div>
         </div>
