Add avatar images to trending section

--- a/index.html
+++ b/index.html
@@ -288,28 +288,28 @@
             <h1>Trending</h1>
             <div class="trends-container">
                 <div class="trend">
-                    <div>image</div>
+                    <img src="./image/butterfly.jpg" alt="avatar">
                     <div class="text">
                         <p class="user">@tegan</p>
                         <p class="project">Cassle Builder</p>
                     </div>
                 </div>
                 <div class="trend">
-                    <div>image</div>
+                    <img src="./image/fox.jpg" alt="avatar">
                     <div class="text">
                         <p class="user">@morgan</p>
                         <p class="project">Megamind Project</p>
                     </div>
                 </div>
                 <div class="trend">
-                    <div>image</div>
+                    <img src="./image/eagle.jpg" alt="avatar">
                     <div class="text">
                         <p class="user">@shadow</p>
                         <p class="project">Laser Saber</p>
                     </div>
                 </div>
                 <div class="trend">
-                    <div>image</div>
+                    <img src="./image/turtle.jpg" alt="avatar">
                     <div class="text">
                         <p class="user">@alex</p>
                         <p class="project">Dancing Machine</p>
