Change annouce container class name

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <div class="announces">
             <h1>Announcements</h1>
-            <div class="announce-container">
+            <div class="announces-container">
                 <div class="announce">
                     <h6 class="brief">Site Maintainance</h6>
                     <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, non.</p>
